{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 2246,
  "lineage": "96483fa7-4e95-2033-6830-10cb3bf6d52e",
  "resources": [
    {
      "module": "module.parameters_inclusion",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private_nacl",
      "provider": "module.parameters_inclusion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:network-acl/acl-0f4e6867d1564ce25",
            "egress": [],
            "id": "acl-0f4e6867d1564ce25",
            "ingress": [],
            "owner_id": "337909786260",
            "subnet_ids": [],
            "tags": {
              "Name": "PrivateNACL-AZ1-Subnet1"
            },
            "tags_all": {
              "Name": "PrivateNACL-AZ1-Subnet1"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:network-acl/acl-023efbf067b25421d",
            "egress": [],
            "id": "acl-023efbf067b25421d",
            "ingress": [],
            "owner_id": "337909786260",
            "subnet_ids": [],
            "tags": {
              "Name": "PrivateNACL-AZ1-Subnet2"
            },
            "tags_all": {
              "Name": "PrivateNACL-AZ1-Subnet2"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:network-acl/acl-0e5562e840e92ed2f",
            "egress": [],
            "id": "acl-0e5562e840e92ed2f",
            "ingress": [],
            "owner_id": "337909786260",
            "subnet_ids": [],
            "tags": {
              "Name": "PrivateNACL-AZ1-Subnet3"
            },
            "tags_all": {
              "Name": "PrivateNACL-AZ1-Subnet3"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:network-acl/acl-09aa883551fba8d85",
            "egress": [],
            "id": "acl-09aa883551fba8d85",
            "ingress": [],
            "owner_id": "337909786260",
            "subnet_ids": [],
            "tags": {
              "Name": "PrivateNACL-AZ2-Subnet1"
            },
            "tags_all": {
              "Name": "PrivateNACL-AZ2-Subnet1"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:network-acl/acl-0c5253f9bc6ffe71e",
            "egress": [],
            "id": "acl-0c5253f9bc6ffe71e",
            "ingress": [],
            "owner_id": "337909786260",
            "subnet_ids": [],
            "tags": {
              "Name": "PrivateNACL-AZ2-Subnet2"
            },
            "tags_all": {
              "Name": "PrivateNACL-AZ2-Subnet2"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:network-acl/acl-0b7bdb65daa5c359c",
            "egress": [],
            "id": "acl-0b7bdb65daa5c359c",
            "ingress": [],
            "owner_id": "337909786260",
            "subnet_ids": [],
            "tags": {
              "Name": "PrivateNACL-AZ2-Subnet3"
            },
            "tags_all": {
              "Name": "PrivateNACL-AZ2-Subnet3"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:network-acl/acl-0fee87744a35ce18e",
            "egress": [],
            "id": "acl-0fee87744a35ce18e",
            "ingress": [],
            "owner_id": "337909786260",
            "subnet_ids": [],
            "tags": {
              "Name": "PrivateNACL-AZ3-Subnet1"
            },
            "tags_all": {
              "Name": "PrivateNACL-AZ3-Subnet1"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:network-acl/acl-05e3b6c95aed9efb6",
            "egress": [],
            "id": "acl-05e3b6c95aed9efb6",
            "ingress": [],
            "owner_id": "337909786260",
            "subnet_ids": [],
            "tags": {
              "Name": "PrivateNACL-AZ3-Subnet2"
            },
            "tags_all": {
              "Name": "PrivateNACL-AZ3-Subnet2"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:network-acl/acl-0984b189befc347db",
            "egress": [],
            "id": "acl-0984b189befc347db",
            "ingress": [],
            "owner_id": "337909786260",
            "subnet_ids": [],
            "tags": {
              "Name": "PrivateNACL-AZ3-Subnet3"
            },
            "tags_all": {
              "Name": "PrivateNACL-AZ3-Subnet3"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.parameters_inclusion",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_nacl",
      "provider": "module.parameters_inclusion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:network-acl/acl-0b55f9cf83063aed8",
            "egress": [],
            "id": "acl-0b55f9cf83063aed8",
            "ingress": [],
            "owner_id": "337909786260",
            "subnet_ids": [],
            "tags": {
              "Name": "PublicNACL-AZ1"
            },
            "tags_all": {
              "Name": "PublicNACL-AZ1"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:network-acl/acl-0d97bdf8944981a0d",
            "egress": [],
            "id": "acl-0d97bdf8944981a0d",
            "ingress": [],
            "owner_id": "337909786260",
            "subnet_ids": [],
            "tags": {
              "Name": "PublicNACL-AZ2"
            },
            "tags_all": {
              "Name": "PublicNACL-AZ2"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:network-acl/acl-0cfc0ca690b29c8e5",
            "egress": [],
            "id": "acl-0cfc0ca690b29c8e5",
            "ingress": [],
            "owner_id": "337909786260",
            "subnet_ids": [],
            "tags": {
              "Name": "PublicNACL-AZ3"
            },
            "tags_all": {
              "Name": "PublicNACL-AZ3"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.parameters_inclusion",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_subnet_association",
      "provider": "module.parameters_inclusion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0dd67a31a45e0d42c",
            "network_acl_id": "acl-0f4e6867d1564ce25",
            "subnet_id": "subnet-0a0cef6f365b85877"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_subnet.private_subnet",
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-01bc1823518aedc60",
            "network_acl_id": "acl-023efbf067b25421d",
            "subnet_id": "subnet-0015502c81417cd89"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_subnet.private_subnet",
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0e6c153eaf28e3a99",
            "network_acl_id": "acl-0e5562e840e92ed2f",
            "subnet_id": "subnet-0c49c59409e2d8137"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_subnet.private_subnet",
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-021ac0167a7b56a2f",
            "network_acl_id": "acl-09aa883551fba8d85",
            "subnet_id": "subnet-068423f1207bac865"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_subnet.private_subnet",
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-014c77d7da5f60d2c",
            "network_acl_id": "acl-0c5253f9bc6ffe71e",
            "subnet_id": "subnet-075304565469a9f89"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_subnet.private_subnet",
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-080fd27f49613188e",
            "network_acl_id": "acl-0b7bdb65daa5c359c",
            "subnet_id": "subnet-0cd214252f9dec8fe"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_subnet.private_subnet",
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0f358182f867342a0",
            "network_acl_id": "acl-0fee87744a35ce18e",
            "subnet_id": "subnet-049a27c3981eddecc"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_subnet.private_subnet",
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-02e46559f9c39da3c",
            "network_acl_id": "acl-05e3b6c95aed9efb6",
            "subnet_id": "subnet-048a09467b0898f30"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_subnet.private_subnet",
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-07fd2088cf774210f",
            "network_acl_id": "acl-0984b189befc347db",
            "subnet_id": "subnet-09db92a0d7f7916b2"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_subnet.private_subnet",
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.parameters_inclusion",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_subnet_association",
      "provider": "module.parameters_inclusion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-057907b214ef823f1",
            "network_acl_id": "acl-0b55f9cf83063aed8",
            "subnet_id": "subnet-02615cf4b62ad101a"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.public_nacl",
            "module.parameters_inclusion.aws_subnet.public_subnet",
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0c92a9ee6abe22737",
            "network_acl_id": "acl-0d97bdf8944981a0d",
            "subnet_id": "subnet-0d6cc221bab7a5343"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.public_nacl",
            "module.parameters_inclusion.aws_subnet.public_subnet",
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-01c31bd8808618014",
            "network_acl_id": "acl-0cfc0ca690b29c8e5",
            "subnet_id": "subnet-09f9cacee2bece732"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.public_nacl",
            "module.parameters_inclusion.aws_subnet.public_subnet",
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.parameters_inclusion",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_http_public",
      "provider": "module.parameters_inclusion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2390385723",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b55f9cf83063aed8",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.public_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-790670800",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d97bdf8944981a0d",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.public_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3383802749",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0cfc0ca690b29c8e5",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.public_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.parameters_inclusion",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_https_public",
      "provider": "module.parameters_inclusion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-366946388",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b55f9cf83063aed8",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.public_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3028672959",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d97bdf8944981a0d",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.public_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1377171218",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0cfc0ca690b29c8e5",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.public_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.parameters_inclusion",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_inbound_private",
      "provider": "module.parameters_inclusion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2983890949",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f4e6867d1564ce25",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2748559938",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-023efbf067b25421d",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4120998493",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e5562e840e92ed2f",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1353731901",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-09aa883551fba8d85",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3073831932",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c5253f9bc6ffe71e",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2852172066",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b7bdb65daa5c359c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3080083279",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0fee87744a35ce18e",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3669662868",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05e3b6c95aed9efb6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3289782108",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0984b189befc347db",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.parameters_inclusion",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_outbound_private",
      "provider": "module.parameters_inclusion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2843527412",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f4e6867d1564ce25",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1769701766",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-023efbf067b25421d",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-207232952",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e5562e840e92ed2f",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2247377901",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-09aa883551fba8d85",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2051380746",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c5253f9bc6ffe71e",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2531871710",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b7bdb65daa5c359c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3558141674",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0fee87744a35ce18e",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-801552699",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-05e3b6c95aed9efb6",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-837709137",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0984b189befc347db",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 101,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.private_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.parameters_inclusion",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_outbound_public",
      "provider": "module.parameters_inclusion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1787141290",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0b55f9cf83063aed8",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 102,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.public_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2393430000",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d97bdf8944981a0d",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 102,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.public_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2104873186",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0cfc0ca690b29c8e5",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 102,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_network_acl.public_nacl",
            "module.parameters_inclusion.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.parameters_inclusion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "module.parameters_inclusion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:security-group/sg-0c0af470531d7f8dd",
            "description": "Security group for private subnets across AZs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0af470531d7f8dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20241126044751247400000004",
            "name_prefix": "terraform-",
            "owner_id": "337909786260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PrivateSecurityGroup"
            },
            "tags_all": {
              "Name": "PrivateSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.parameters_inclusion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "module.parameters_inclusion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:security-group/sg-0b208c3ff05bfb86e",
            "description": "Security group for public subnets across AZs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b208c3ff05bfb86e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241126044753530600000006",
            "name_prefix": "terraform-",
            "owner_id": "337909786260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PublicSecurityGroup"
            },
            "tags_all": {
              "Name": "PublicSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.parameters_inclusion",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.parameters_inclusion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:subnet/subnet-0a0cef6f365b85877",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0cef6f365b85877",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337909786260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-1-AZ1"
            },
            "tags_all": {
              "Name": "PrivateSubnet-1-AZ1"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:subnet/subnet-0015502c81417cd89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0015502c81417cd89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337909786260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-2-AZ2"
            },
            "tags_all": {
              "Name": "PrivateSubnet-2-AZ2"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:subnet/subnet-0c49c59409e2d8137",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c49c59409e2d8137",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337909786260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-3-AZ3"
            },
            "tags_all": {
              "Name": "PrivateSubnet-3-AZ3"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:subnet/subnet-068423f1207bac865",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068423f1207bac865",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337909786260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-4-AZ1"
            },
            "tags_all": {
              "Name": "PrivateSubnet-4-AZ1"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:subnet/subnet-075304565469a9f89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075304565469a9f89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337909786260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-5-AZ2"
            },
            "tags_all": {
              "Name": "PrivateSubnet-5-AZ2"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:subnet/subnet-0cd214252f9dec8fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd214252f9dec8fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337909786260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-6-AZ3"
            },
            "tags_all": {
              "Name": "PrivateSubnet-6-AZ3"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:subnet/subnet-049a27c3981eddecc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049a27c3981eddecc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337909786260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-7-AZ1"
            },
            "tags_all": {
              "Name": "PrivateSubnet-7-AZ1"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:subnet/subnet-048a09467b0898f30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048a09467b0898f30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337909786260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-8-AZ2"
            },
            "tags_all": {
              "Name": "PrivateSubnet-8-AZ2"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:subnet/subnet-09db92a0d7f7916b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09db92a0d7f7916b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337909786260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-9-AZ3"
            },
            "tags_all": {
              "Name": "PrivateSubnet-9-AZ3"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.parameters_inclusion",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.parameters_inclusion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:subnet/subnet-02615cf4b62ad101a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02615cf4b62ad101a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337909786260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-AZ1"
            },
            "tags_all": {
              "Name": "PublicSubnet-AZ1"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:subnet/subnet-0d6cc221bab7a5343",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6cc221bab7a5343",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337909786260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-AZ2"
            },
            "tags_all": {
              "Name": "PublicSubnet-AZ2"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:subnet/subnet-09f9cacee2bece732",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f9cacee2bece732",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337909786260",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-AZ3"
            },
            "tags_all": {
              "Name": "PublicSubnet-AZ3"
            },
            "vpc_id": "vpc-0555192a11f88639b"
          },
          "dependencies": [
            "module.parameters_inclusion.aws_vpc.main",
            "module.parameters_inclusion.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.parameters_inclusion",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.parameters_inclusion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337909786260:vpc/vpc-0555192a11f88639b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-076b02f61129a9745",
            "default_route_table_id": "rtb-012226de1833f22ca",
            "default_security_group_id": "sg-0fb486f751c19b7bd",
            "dhcp_options_id": "dopt-0bab13963592241a7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0555192a11f88639b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-012226de1833f22ca",
            "owner_id": "337909786260",
            "tags": {
              "Name": "MainVPC"
            },
            "tags_all": {
              "Name": "MainVPC"
            }
          }
        }
      ]
    }
  ]
}